# hamblin

./: .gitignore  README.md  notes-hamblin.md  pyproject.toml
src/hamblin/: __init__.py  _codec.py
tests/: conftest.py  test_codec.py  test_properties.py
