[project]
name = "hamblin"
version = "0.1.0"
description = "Recursion-free binary serialization for frozen-dataclass trees (postfix opcode stream + stack machine)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Q", email = "q.alpha@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest", "pyright", "hypothesis"]

[tool.pyright]
include = ["src/hamblin"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
